# mlflink

./: .gitignore  README.md  draft.txt  pyproject.toml
.github/workflows/: ci.yaml
mlflink/: mlflow_local_run_example.py  polling.py  preprocessing.py  send_run_to_fink_example.py
mlflink/data/: test_alerts.parquet
mlflink/preprocessing/: preprocessing.py
mlflink/processing/: processor.py
mlflink/tests/: test_preprocessing.py
mlflink/utils/: env_utils.py
tutorials/: 01_mlflow_local_setup_and_first_run.ipynb  02_send_run_to_remote_server.ipynb
